--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "taro-ui": "3.0.0-alpha.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
