--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@tarojs/react": "3.0.10",
     "@tarojs/runtime": "3.0.10",
     "@tarojs/taro": "3.0.10",
+    "mocker-api": "^2.7.1",
+    "mockjs": "^1.1.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-redux": "^7.2.1",
